@@ -16,13 +16,14 @@ subprojects {
         jcenter()
     }
     dependencies {
-        compile 'com.google.code.findbugs:annotations:2.0.0'
+        compile 'com.google.code.findbugs:jsr305:3.0.1'
         testCompile('log4j:log4j:1.2.16')
     }
     group = "com.netflix.${githubProjectName}" 
 
     tasks.withType(Test) { forkEvery = 1 }
     test {
+        jvmArgs += [ "-XX:MaxPermSize=512m" ] // for archaius-scala
         maxHeapSize = '2g' // or however much memory the tests need
         testLogging {
             events 'started', 'failed', 'passed', 'skipped'
@@ -113,8 +114,8 @@ project(':archaius-scala') {
 
     dependencies {
         compile project(':archaius-core')
-        compile 'org.scala-lang:scala-library:2.10.1'
-        testCompile 'org.scalatest:scalatest_2.10.0:1.8'
+        compile 'org.scala-lang:scala-library:2.10.4'
+        testCompile 'org.scalatest:scalatest_2.10:2.2.5'
         testCompile 'junit:junit:4.11'
     }
 }
